--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   </head>
   <body>
     <h1>inicio de una pagina web</h1>
+    <p>Esto es lo basico las etiquetas que sirven para que al momento de declarar algo en html, el programa lo pueda enterner</p>
+    <ol>
+      <li>esto es para crear una lista</li>
+      <li>esto es para crear una lista</li>
+    </ol>
   </body>
 </html>
 
