--- a/inicio.html
+++ b/inicio.html
@@ -3,13 +3,16 @@
     <tittle>COMENZANDO DESDE CERO</tittle>
   </head>
   <body>
-    <h1>inicio de una pagina web</h1>
+    <ol>
+      <li><h1>inicio de una pagina web</h1></li>
     <h2>inicio de una pagina web</h2>
     <h3>inicio de una pagina web</h3>
     <h4>inicio de una pagina web</h4>
     <h4>inicio de una pagina web</h4>
     <h5>inicio de una pagina web</h5>
     <h6>inicio de una pagina web </h6>
+    </ol>
+    
     <p>Esto es lo basico las etiquetas que sirven para que al momento de declarar algo en html, el programa lo pueda enterner</p>
     <ol>
       <li>esto es para crear una lista</li>
