--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <ol>
-      <li>"<h1>inicio de una pagina web</h1>"</li>
+      <li><h1>inicio de una pagina web</h1></li>
     <h2>inicio de una pagina web</h2>
     <h3>inicio de una pagina web</h3>
     <h4>inicio de una pagina web</h4>
