--- a/inicio.html
+++ b/inicio.html
@@ -5,12 +5,11 @@
   <body>
     <ol>
       <li><h1>inicio de una pagina web</h1></li>
-    <h2>inicio de una pagina web</h2>
-    <h3>inicio de una pagina web</h3>
-    <h4>inicio de una pagina web</h4>
-    <h4>inicio de una pagina web</h4>
-    <h5>inicio de una pagina web</h5>
-    <h6>inicio de una pagina web </h6>
+    <li><h2>inicio de una pagina web</h2></li>
+    <li><h3>inicio de una pagina web</h3></li>
+    <li><h4>inicio de una pagina web</h4></li>
+    <li><h5>inicio de una pagina web</h5></li>
+    <li><h6>inicio de una pagina web </h6></li>
     </ol>
     
     <p>Esto es lo basico las etiquetas que sirven para que al momento de declarar algo en html, el programa lo pueda enterner</p>
