--- a/inicio.html
+++ b/inicio.html
@@ -14,7 +14,7 @@
  
     <p>Esto es lo basico las etiquetas que sirven para que al momento de declarar algo en html, el programa lo pueda enterner</p>
     <ol>
-      <l1>esto es para crear una lista</l1>
+      <li>esto es para crear una lista</li>
       <li>esto es para crear una lista</li>
     </ol>
   </body>
