--- a/inicio.html
+++ b/inicio.html
@@ -17,6 +17,7 @@
       <li>esto es para crear una lista</li>
       <li>esto es para crear una lista</li>
     </ol>
+    <a href="https://www.youtube.com/watch?v=ELSm-G201Ls">ACA ESTOY APRENDIENDO DESDE CERO</a>
   </body>
 </html>
 
