--- a/inicio.html
+++ b/inicio.html
@@ -18,6 +18,7 @@
       <li>esto es para crear una lista</li>
     </ol>
     <a href="https://www.youtube.com/watch?v=ELSm-G201Ls">ACA ESTOY APRENDIENDO DESDE CERO</a>
+    <a href="enlace.html">deberia estar conectado</a>
   </body>
 </html>
 
