--- a/inicio.html
+++ b/inicio.html
@@ -12,7 +12,7 @@
     <li><h6>inicio de una pagina web </h6></li>
     </ol>
  
-    <p>Esto es lo basico las etiquetas que sirven para que al momento de declarar algo en html, el programa lo pueda enterner</p>
+    <p>Esto es lo basico las etiquetas que sirven para que al momento de declarar algo en html, el programa lo pueda enterner.</p>
     <ol>
       <li>esto es para crear una lista</li>
       <li>esto es para crear una lista</li>
