--- a/inicio.html
+++ b/inicio.html
@@ -19,6 +19,7 @@
     </ol>
     <a href="https://www.youtube.com/watch?v=ELSm-G201Ls">ACA ESTOY APRENDIENDO DESDE CERO</a><br>
     <a href="enlace.html">deberia estar conectado</a>
+    <a href=""></a>
   </body>
 </html>
 
