--- a/inicio.html
+++ b/inicio.html
@@ -18,8 +18,8 @@
       <li>esto es para crear una lista</li>
     </ol>
     <a href="https://www.youtube.com/watch?v=ELSm-G201Ls">ACA ESTOY APRENDIENDO DESDE CERO</a><br>
-    <a href="enlace.html">deberia estar conectado</a>
-    <a href=""></a>
+    <a href="enlace.html">deberia estar conectado</a><br>
+    <a href="enlace2.html" target="_blank"> un segundo enlace pero enpestaña nueva</a>
   </body>
 </html>
 
