--- a/inicio.html
+++ b/inicio.html
@@ -20,7 +20,7 @@
     <a href="https://www.youtube.com/watch?v=ELSm-G201Ls">ACA ESTOY APRENDIENDO DESDE CERO</a><br>
     <a href="enlace.html">deberia estar conectado</a><br>
     <a href="enlace2.html" target="_blank"> un segundo enlace pero enpestaña nueva</a>
-    <img src>"pollito.pnj>
+    <img src>"pollito.pnj">
   </body>
 </html>
 
