--- a/inicio.html
+++ b/inicio.html
@@ -19,7 +19,7 @@
     </ol>
     <a href="https://www.youtube.com/watch?v=ELSm-G201Ls">ACA ESTOY APRENDIENDO DESDE CERO</a><br>
     <a href="enlace.html">deberia estar conectado</a><br>
-    <a href="enlace2.html" target="_blank"> un segundo enlace pero enpestaña nueva</a>
+    <a href="enlace2.html" target="_blank"> un segundo enlace pero enpestaña nueva</a><br>
     <img src="pollito.png">
   </body>
 </html>
