--- a/formulario.html
+++ b/formulario.html
@@ -2,9 +2,11 @@
   <head>
     <title>FORMULARIO</title>
     <body>
-      <form>
+      <table>
+         <form>
         <input type="text">
       </form>
+      </table> 
     </body>
   </head>
 </html>
