--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,7 @@
       <table>
          <form>
         <input type="text">
+           <input type="color">
       </form>
       </table> 
     </body>
