--- a/formulario.html
+++ b/formulario.html
@@ -4,7 +4,7 @@
     <body>
       <table>
          <form>
-        <input type="text">
+        <input type="text"><br>
            <input type="color">
       </form>
       </table> 
