--- a/formulario.html
+++ b/formulario.html
@@ -2,7 +2,7 @@
   <head>
     <title>FORMULARIO</title>
     <body>
-      <table>
+      <table class="table" border="1">
          <form>
         <input type="text"><br>
            <input type="color">
