--- a/formulario.html
+++ b/formulario.html
@@ -2,12 +2,13 @@
   <head>
     <title>FORMULARIO</title>
     <body>
-      <table class="table" border="50">
          <form>
-        <input type="text"><br>
-           <input type="color">
+           <input type="text"required><br>
+           <input type="email" required><br>
+           <input type="color"><br>
+           <input type="date">
+           <input type="submit">
       </form>
-      </table> 
     </body>
   </head>
 </html>
