--- a/formulario.html
+++ b/formulario.html
@@ -3,7 +3,7 @@
     <title>FORMULARIO</title>
     <body>
          <form>
-           <input type="text"required><br>
+           <input type="text"required placeholder="Escriba una idea"><br>
            <input type="email" required><br>
            <input type="color"><br>
            <input type="date">
