--- a/formulario.html
+++ b/formulario.html
@@ -3,6 +3,7 @@
     <title>FORMULARIO</title>
     <body>
          <form>
+           <input type="text" name="username" placeholder="YOUR NAME"><br>
            <input type="text"required placeholder="Escriba una idea"><br>
            <input type="email" required><br>
            <input type="color"><br>
