--- a/formulario.html
+++ b/formulario.html
@@ -5,7 +5,7 @@
          <form>
            <input type="text" name="username" placeholder="YOUR NAME"><br>
            <input type="text"required placeholder="Escriba una idea"><br>
-           <input type="email" required><br>
+           <input type="email" required name="email" placeholder="escriba su email"><br>
            <input type="color"><br>
            <input type="date">
            <input type="submit">
