--- a/css/inicio-css.html
+++ b/css/inicio-css.html
@@ -7,5 +7,9 @@
     <p>
       El CSS podría definirse como un tipo de lenguaje que permite definir y crear la presentación visual de un documento ya estructurado y escrito en un lenguaje de marcado como puede ser HTML.
     </p>
+    <ul>
+      <li class="ejemplo1">Aca se agrego una clase para poder dar ejemplo de como se utiliza.</li>
+      <li id="ejemplo2">Aca se agrego un id para poder hacer el ejemplo y entender pero el id se pone a una sola cosa.</li>
+    </ul>
   </body>
 </html>
