--- a/css/inicio-css.html
+++ b/css/inicio-css.html
@@ -10,6 +10,7 @@
     <ul>
       <li class="ejemplo1">Aca se agrego una clase para poder dar ejemplo de como se utiliza.</li>
       <li id="ejemplo2">Aca se agrego un id para poder hacer el ejemplo y entender pero el id se pone a una sola cosa.</li>
+      <li class="elemento">deberia funcionar</li>
     </ul>
   </body>
 </html>
