--- a/css/css2.html
+++ b/css/css2.html
@@ -4,9 +4,9 @@
   <link rel="stylesheet" href="style.css">
 </body>
 <head>
-  <p class="filosofia">"Filosofía en la calle" invita a los lectores a reflexionar sobre cuestiones cotidianas como superar una ruptura 
+  <h4 class="filosofia">"Filosofía en la calle" invita a los lectores a reflexionar sobre cuestiones cotidianas como superar una ruptura 
     sentimental, afrontar la muerte de un ser querido o determinar cuánto necesitamos comprar para ser felices. Cada capítulo presenta un problema contemporáneo y ofrece diversas 
     respuestas aportadas por grandes filósofos a lo largo de la historia. El autor, Eduardo Infante, transforma la asignatura de filosofía en un curso de lecciones socráticas 
-    cargadas de ironía, sentido del humor y referencias al cine, fomentando el ejercicio del pensamiento y la participación activa en el debate.</p>
+    cargadas de ironía, sentido del humor y referencias al cine, fomentando el ejercicio del pensamiento y la participación activa en el debate.</h4>
 </head>
 </html>
