--- a/css/css3.html
+++ b/css/css3.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>box model</title>
-    <link rel:"styledsheet" href:"style1.css">
+    <link rel:"stylesheet" href:"style1.css">
   </head>
   <body>
     <div>
