--- a/css/css3.1.html
+++ b/css/css3.1.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <form class="formulario_ejemplo">
-      <input  type="text" placeholder="email">
-      <input  type="pasword" placeholder="contraseña">
-      <input type="submit"> 
+      <input  class="formulario_input" type="text" placeholder="email">
+      <input  class="formulario_input" type="pasword" placeholder="contraseña">
+      <input  class="formulario_input formulario_submit" type="submit"> 
     </form>
   </body>
 </html>
