--- a/css/css3.1.html
+++ b/css/css3.1.html
@@ -6,7 +6,7 @@
   <body>
     <form class="formulario_ejemplo">
       <input  class="formulario_input" type="text" placeholder="email">
-      <input  class="formulario_input formulario_contraseña" type="pasword" placeholder="contraseña">
+      <input  class="formulario_input formulario_pas" type="pasword" placeholder="contraseña">
       <input  class="formulario_input formulario_submit" type="submit"> 
     </form>
   </body>
